# vllm-omni

./: .gitignore  .pre-commit-config.yaml  AI_EXPERT_REVIEW_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INDEX_PR14_REVIEW.md  MANIFEST.in  PR12_EXPERT_REVIEW.md  PR13_ACTION_ITEMS.md  PR13_EXPERT_REVIEW.md  PR13_REVIEW_README.md  PR13_REVIEW_SUMMARY.md  PR17_FIXES.md  PR17_REVIEW.md  PR17_SUMMARY.md  PR_14_EXPERT_REVIEW.md  PR_14_QUICK_FIXES.md  PR_14_REVIEW_README.md  PR_14_SUMMARY.md  PR_15_REVIEW.md  PR_15_REVIEW_SUMMARY.md  PR_15_SUGGESTED_FIXES.md  PR_16_AUTHOR_CHECKLIST.md  PR_16_EXECUTIVE_SUMMARY.md  PR_16_EXPERT_REVIEW.md  PR_16_FIX_GUIDE.md  PR_16_INDEX.md  PR_16_REVIEW_README.md  PR_16_REVIEW_SUMMARY.md  PR_18_EXPERT_REVIEW.md  PR_18_FIXES_REQUIRED.md  PR_18_UPDATE_REVIEW.md  PR_19_DETAILED_REVIEW.md  PR_19_REVIEW.md  PR_19_REVIEW_INDEX.md  PR_19_REVIEW_PACKAGE_README.md  PR_19_REVIEW_STATUS.md  PR_19_REVIEW_SUMMARY.md  (+19 more)
.buildkite/: bootstrap-omni-amd.sh  ci_config.yaml  pipeline.yml  test-amd.yaml  test-template-amd-omni.j2
.buildkite/jobs/: tests.yaml
.buildkite/scripts/: diffusion_model_test.sh  run_qwen_offline_example.sh  setup_env.sh  simple_test.sh
.buildkite/scripts/hardware_ci/: run-amd-test.sh  run_npu_test.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 200-installation.yml  500-feature-request.yml  600-new-model.yml  700-performance-discussion.yml  config.yml
.github/scripts/: cleanup_pr_body.sh  detect_changed_tests.sh
.github/workflows/: automerge.yml  build_wheel.yml  ci-all-files.yml  ci.yml  docs.yml  pre-commit.yml  publish.yml
benchmarks/: README.md  benchmark_serving.py  diffusion_benchmark_serving.py
benchmarks/build_dataset/: extract_tts_prompts.py
benchmarks/online_serving/: README.md
benchmarks/online_serving/image_to_image/: benchmark_i2i.py
benchmarks/online_serving/image_to_video/: benchmark_i2v.py
benchmarks/online_serving/text_to_image/: benchmark_t2i.py  benchmark_t2i_adv.py
benchmarks/online_serving/text_to_video/: benchmark_t2v.py
benchmarks/qwen3-omni/: README.md
benchmarks/qwen3-omni/transformers/: qwen3_omni_moe_model.py
docker/: Dockerfile  Dockerfile.rocm  Dockerfile.test
docs/: .nav.yml  AI_EXPERT_PR_REVIEW_GUIDE.md  AI_REVIEW_QUICK_REFERENCE.md  FAQ.md  HOW_TO_REVIEW_PR20.md  INSTALLATION_VERIFICATION.md  PR_20_EXPERT_REVIEW.md  PR_20_EXPERT_REVIEW_UPDATE.md  PR_20_REVIEW.md  QUICKSTART.md  README.md  image_generation_api.md  index.md  mrs_design.md
docs/api/: README.md  overview.md
docs/architecture/: high_level_arch_design.md  vllm_omni_design.md
docs/community/: contact_us.md  volunteers.md
docs/configuration/: README.md  stage_configs.md  teacache.md
docs/configuration/stage_configs/: qwen2_5_omni.yaml
docs/contributing/: DOCS_GUIDE.md  README.md  profiling.md
docs/design/: api_design_doc.md  api_design_template.md  architecture_overview.md  index.md  vllm_omni_design.md
docs/examples/: README.md
docs/features/: README.md
docs/getting_started/: quickstart.md
docs/models/: supported_models.md
docs/serving/: image_generation_api.md
docs/stylesheets/: extra.css
docs/usage/: README.md  faq.md
docs/user_guide/: cache_dit_acceleration.md  diffusion_acceleration.md  teacache.md
examples/offline_inference/: mammoth_moda2_text_token_step.py  run_mammothmoda2.py  run_mammothmoda2_t2i.py
examples/online_serving/: README.md  gradio_demo.py  openai_chat_completion_client_for_multimodal_generation.py  run_curl_multimodal_generation.sh  run_server.sh
scripts/: build_wheel.sh
tests/: __init__.py  conftest.py  test_diffusion_model.py  test_omni_llm.py  test_outputs.py  test_qwen2_5_omni_online_server.py  utils.py
tests/diffusion/: test_cpu_offload.py  test_gpu_worker.py
tests/distributed/: test_ring_attention.py  test_ulysses_sequence_parallel.py
tests/e2e/: test_rpc_collective.py
tests/entrypoints/: test_omni_llm.py
tests/fun_audio_chat/: test_unit_comparison.py
tests/multi_stages/: conftest.py  test_qwen2_5_omni.py  test_qwen2_5_omni_online.py  test_qwen2_5_omni_online_server.py  test_qwen3_omni.py  test_qwen_omni.py
tests/multi_stages_h100/: conftest.py  test_omni_offline.py  test_omni_online.py  test_qwen3_omni.py
tests/omni/: conftest.py  test_qwen_omni.py
tests/single_stage/: test_diffusion_model.py  test_ovis_image.py  test_video_diffusion_model.py
tools/: README.md  review_pr.py
tools/pre_commit/: check_pickle_imports.py
vllm_omni/: __init__.py  outputs.py  patch.py  request.py  version.py
vllm_omni/benchmarks/: datasets.py  serve.py
vllm_omni/config/: __init__.py  model.py  stage_config.py
vllm_omni/core/: __init__.py  dit_cache_manager.py
vllm_omni/diffusion/: __init__.py  compile.py  data.py  diffusion_engine.py  envs.py  forward_context.py  gpu_worker.py  hooks.py  launch_engine.py  model.py  offload.py  omni_diffusion.py  registry.py  req.py  request.py  sample.py  schedule.py  scheduler.py  utils.py
vllm_omni/distributed/: __init__.py
vllm_omni/engine/: __init__.py  arg_utils.py  input_processor.py  output_processor.py  processor.py
vllm_omni/entrypoints/: __init__.py  async_diffusion.py  async_omni.py  async_omni_llm.py  chat_utils.py  client_request_state.py  log_utils.py  omni.py  omni_diffusion.py  omni_llm.py  omni_llm_bak.py  omni_lm.py  omni_stage.py  omni_stage_worker.py  stage_manager.py  stage_utils.py  utils.py
vllm_omni/inputs/: data.py  parse.py  preprocess.py
vllm_omni/model_executor/: custom_process_mixin.py  preprocess_mixin.py
vllm_omni/sample/: __init__.py
vllm_omni/utils/: __init__.py  diffusers_utils.py  platform_utils.py
vllm_omni/worker/: AR_gpu_model_runner.py  AR_gpu_worker.py  __init__.py  diffusion_gpu_worker.py  diffusion_model_runner.py  gpu_ar_model_runner.py  gpu_ar_worker.py  gpu_diffusion_model_runner.py  gpu_diffusion_worker.py  gpu_generation_model_runner.py  gpu_generation_worker.py  gpu_model_runner.py  model_runner.py  npu_ar_model_runner.py  npu_ar_worker.py  npu_diffusion_model_runner.py  npu_diffusion_worker.py  npu_model_runner.py
(+457 files in other folders)
